--- a/Tyuiu.BatTI.Sprint4.Task0.V29.Lib/Tyuiu.BatTI.Sprint4.Task0.V29.Lib.csproj
+++ b/Tyuiu.BatTI.Sprint4.Task0.V29.Lib/Tyuiu.BatTI.Sprint4.Task0.V29.Lib.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Reference Include="tyuiu.cources.programming.interfaces">
-      <HintPath>..\..\Tyuiu.BatTI.Sprint3\tyuiu.cources.programming.interfaces.dll</HintPath>
+      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
 
